--- a/pingpong/style.css
+++ b/pingpong/style.css
@@ -23,24 +23,33 @@ body {
     width:100%;
     height:100%;
     object-fit: fill;
+    top: 30%;
 }
 
 
 .winOrLose {
     position: absolute;
     display: none;
+    top: 10%;
+}
+
+h1 {
+    font-family: "RetroGameFont";
+    font-size: 45px;
 }
 
 #gameover_img {
     position: absolute;
     display: none;
     width: 30%;
-    top: 15%;
+    top: 10%;
     left: 35%;
 }
 
-#gameover_img > img {
-    width: 100%;
+#gameover_img > p {
+    font-family: "RetroGameFont";
+    font-size: 100px;
+    text-align: center;
 }
 
 #reset_img {
@@ -53,4 +62,10 @@ body {
 
 #reset_img > a > img {
     width: 100%;
+}
+
+
+@font-face {
+    font-family: "RetroGameFont";
+    src: url(./Retro\ Gaming.ttf);
 }
